fix header UI about overflow

--- a/chat-react/src/css/app.css
+++ b/chat-react/src/css/app.css
@@ -23,13 +23,13 @@ body, html {
 .header {
   width: 100%;
   height: 10vh;
-  
+  position: relative;
   background-color:rgb(128, 221, 255);
 }
 
 .header-content {
   position: fixed;
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
   margin: auto 0;
   text-align: center;
@@ -184,7 +184,8 @@ h5 {
   overflow-y: auto;
   overflow-x: hidden;
   font-family: 'Microsoft JhengHei', '微軟正黑體', sans-serif;
-
+  
+  
   
   
 }
@@ -195,12 +196,18 @@ h5 {
   margin-left: 2vw;
   
   
+  
+  
 }
 
 .my-message {
   display: flex;
   justify-content: flex-end;
   margin-right: 2vw;
+  
+  
+  
+  
   
 }
 
@@ -215,6 +222,7 @@ h5 {
   font-size: 3vh;
   margin-top: 1vh;
   max-width: 40%;
+
   
   
 }
@@ -232,8 +240,6 @@ h5 {
   border-radius: 10px;
   overflow-x: hidden;
   word-break: break-all;
-  
-  
   
 }
 
